Add config options for env loki (#484)
* Add loki_querier_replica_count

* loki_query_scheduler_enabled: false

* increase loki timeout from 30s to 60s

* loki_querier_replica_count: "2"

--- a/terraform/k8s/default-config/common-vars.yaml
+++ b/terraform/k8s/default-config/common-vars.yaml
@@ -36,9 +36,11 @@ prometheus_pvc_size: 50Gi
 loki_retention_enabled: true
 loki_ingester_retention_period: 72h
 loki_ingester_max_chunk_age: 2h
+loki_query_scheduler_enabled: false
 loki_ingester_replication_factor: "3"
 loki_distributor_replica_count: "2"
 loki_ingester_replica_count: "3" # loki_ingester_replica_count should be >= loki_ingester_replication_factor
+loki_querier_replica_count: "2"
 prometheus_retention_period: 10d
 tempo_retention_period: 72h
 istio_egress_gateway_max_replicas: 5
