--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -13,7 +13,7 @@ resources:
   - ../../../base/istio.yaml
   - ../../../base/istio-gw.yaml
   - ../../../base/cert-manager.yaml
-  - ../../../base/capi.yaml
+  #- ../../../base/capi.yaml
   #- ../../../base/consul.yaml
   # - ../../../base/percona-operator.yaml
   # - ../../../base/redis-operator.yaml
