--- a/gitops/argo-apps/base/capi.yaml
+++ b/gitops/argo-apps/base/capi.yaml
@@ -60,11 +60,11 @@ spec:
         - name: "capi_cluster_kubeapi_host"
           value: "${ARGOCD_ENV_utils_capi_capi_cluster_kubeapi_host}"
 
-        # - name: "capi_cluster_kubeapi_port"
-        #   value: "${ARGOCD_ENV_utils_capi_capi_cluster_kubeapi_port}"
+        - name: "capi_cluster_kubeapi_port"
+          value: "${ARGOCD_ENV_utils_capi_capi_cluster_kubeapi_port}"
 
-        # - name: "capi_cluster_network_subnet"
-        #   value: "${ARGOCD_ENV_utils_capi_capi_cluster_network_subnet}"
+        - name: "capi_cluster_network_subnet"
+          value: "${ARGOCD_ENV_utils_capi_capi_cluster_network_subnet}"
 
         - name: "capi_cluster_network_gateway"
           value: "${ARGOCD_ENV_utils_capi_capi_cluster_network_gateway}"
@@ -81,26 +81,26 @@ spec:
         - name: "capi_cluster_proxmox_host_password"
           value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_host_password}"
 
-        # - name: "capi_cluster_proxmox_host_vlan"
-        #   value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_host_vlan}"
+        - name: "capi_cluster_proxmox_host_vlan"
+          value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_host_vlan}"
 
         - name: "capi_cluster_proxmox_host_net_interface"
           value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_host_net_interface}"
 
-        # - name: "capi_cluster_proxmox_control_plane_cpu"
-        #   value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_control_plane_cpu}"
+        - name: "capi_cluster_proxmox_control_plane_cpu"
+          value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_control_plane_cpu}"
 
-        # - name: "capi_cluster_proxmox_control_plane_memory"
-        #   value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_control_plane_memory}"
+        - name: "capi_cluster_proxmox_control_plane_memory"
+          value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_control_plane_memory}"
 
-        # - name: "capi_cluster_proxmox_worker_cpu"
-        #   value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_worker_cpu}"
+        - name: "capi_cluster_proxmox_worker_cpu"
+          value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_worker_cpu}"
 
-        # - name: "capi_cluster_proxmox_worker_memory"
-        #   value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_worker_memory}"
+        - name: "capi_cluster_proxmox_worker_memory"
+          value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_worker_memory}"
 
-        # - name: "capi_cluster_proxmox_worker_replicas"
-        #   value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_worker_replicas}"
+        - name: "capi_cluster_proxmox_worker_replicas"
+          value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_worker_replicas}"
 
         - name: "capi_cluster_proxmox_user"
           value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_user}"
