--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   - ../../../base/reflector.yaml
   - ../../../base/reloader.yaml
   - ../../../base/crossplane.yaml
-  - ../../../base/utils-post-config.yaml
+  #- ../../../base/utils-post-config.yaml
   - ../../../base/istio.yaml
   - ../../../base/istio-gw.yaml
   - ../../../base/cert-manager.yaml
