--- a/gitops/argo-apps/base/capi.yaml
+++ b/gitops/argo-apps/base/capi.yaml
@@ -32,13 +32,14 @@ spec:
       targetRevision: ${ARGOCD_ENV_utils_capi_capi_operator_version}
       helm:
         valuesObject:
-          bootstrap: kubeadmm
-          controlPlane: kubeadmm
+          bootstrap: kubeadm
+          controlPlane: kubeadm
           infrastructure: proxmox
           cert-manager:
             enabled: true
           fetchConfig:
-            url: https://raw.githubusercontent.com/k8s-proxmox/cluster-api-provider-proxmox/refs/tags/v${ARGOCD_ENV_utils_capi_capi_infra_provider_version}/clusterctl.yaml
+            proxmox:
+              url: https://raw.githubusercontent.com/k8s-proxmox/cluster-api-provider-proxmox/refs/tags/v${ARGOCD_ENV_utils_capi_capi_infra_provider_version}/clusterctl.yaml
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
