add version to provider

--- a/gitops/argo-apps/base/capi.yaml
+++ b/gitops/argo-apps/base/capi.yaml
@@ -34,7 +34,7 @@ spec:
         valuesObject:
           bootstrap: kubeadm
           controlPlane: kubeadm
-          infrastructure: proxmox
+          infrastructure: proxmox:v${ARGOCD_ENV_utils_capi_capi_infra_provider_version}
           cert-manager:
             enabled: true
           fetchConfig:
