--- a/gitops/argo-apps/base/capi.yaml
+++ b/gitops/argo-apps/base/capi.yaml
@@ -34,9 +34,12 @@ spec:
         valuesObject:
           bootstrap: kubeadm
           controlPlane: kubeadm
+          infrastructure: proxmox:v${ARGOCD_ENV_utils_capi_capi_infra_provider_version}
           cert-manager:
             enabled: true
-
+          fetchConfig:
+            proxmox:
+              url: https://github.com/k8s-proxmox/cluster-api-provider-proxmox/releases/v${ARGOCD_ENV_utils_capi_capi_infra_provider_version}/infrastructure-components.yaml
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
