--- a/gitops/applications/overlays/block_storage_provider/ebs/deploy-env-onboard/env-onboard-xplane-terraform.yaml
+++ b/gitops/applications/overlays/block_storage_provider/ebs/deploy-env-onboard/env-onboard-xplane-terraform.yaml
@@ -55,8 +55,11 @@ spec:
   forProvider:
     # Use any module source supported by terraform init -from-module.
     source: Remote
-    module: git::https://github.com/mojaloop/iac-modules.git//terraform/config-params/ccnew-config/env-blockstorage-pre?ref=${ARGOCD_ENV_terraform_modules_tag}
+    module: git::https://github.com/mojaloop/iac-modules.git//terraform/config-params/ccnew-config/env-onboard-blockstorageaws-pre?ref=${ARGOCD_ENV_terraform_modules_tag}
     # Variables can be specified inline as a list of key-value pairs or as an json object, or loaded from a ConfigMap or Secret.
+    env:
+      - name: TF_CLI_CONFIG_FILE
+        value: ./.terraformrc
     vars:
       - key: env_name
         value: "${ARGOCD_ENV_env_name}"
