--- a/gitops/argo-apps/base/capi.yaml
+++ b/gitops/argo-apps/base/capi.yaml
@@ -54,7 +54,7 @@ spec:
   project: default
   ignoreDifferences:
     - group: "infrastructure.cluster.x-k8s.io"
-      name: "{ARGOCD_ENV_utils_capi_capi_cluster_name}"
+      name: "${ARGOCD_ENV_utils_capi_capi_cluster_name}"
       kind: ProxmoxCluster
       jsonPointers:
         - /spec/storage/path
