--- a/terraform/k8s/default-config/common-vars.yaml
+++ b/terraform/k8s/default-config/common-vars.yaml
@@ -54,3 +54,5 @@ longhorn_backup_job_enabled: false
 enable_central_observability_write: false
 enable_central_observability_read: false
 coredns_localcache_version: "1.11.3"
+aws_ebs_csi_driver_helm_version: "2.39.0"
+aws_ebs_csi_driver_replicas: 2
