add 60s timeout to loki

--- a/gitops/applications/base/monitoring-post-config/grafana-crs.yaml
+++ b/gitops/applications/base/monitoring-post-config/grafana-crs.yaml
@@ -96,6 +96,7 @@ spec:
     access: proxy
     url: http://control-center-loki-grafana-loki-gateway
     jsonData:
+      timeout: 60
       httpHeaderName1: 'X-Scope-OrgID'
     secureJsonData:
       httpHeaderValue1: '1'
