--- a/gitops/applications/base/monitoring-post-config/dashboards-storage.yaml
+++ b/gitops/applications/base/monitoring-post-config/dashboards-storage.yaml
@@ -78,7 +78,15 @@ spec:
   instanceSelector:
     matchLabels:
       dashboards: "grafana"
-  # datasources:
-  #   - inputName: "DS_PROMETHEUS"
-  #     datasourceName: "${ARGOCD_ENV_dashboard_datasource_name}"
   url: "https://raw.githubusercontent.com/mojaloop/iac-modules/${ARGOCD_ENV_monitoring_application_gitrepo_tag}/assets/grafana-dashboards/loki-storage.json"
+---
+apiVersion: grafana.integreatly.org/v1beta1
+kind: GrafanaDashboard
+metadata:
+  name: storage-quick-view
+spec:
+  folder: storage
+  instanceSelector:
+    matchLabels:
+      dashboards: "grafana"
+  url: "https://raw.githubusercontent.com/mojaloop/iac-modules/${ARGOCD_ENV_monitoring_application_gitrepo_tag}/assets/grafana-dashboards/storage-quick-view.json"
