--- a/gitops/applications/base/deploy-env-onboard/env-onboard-xplane-terraform.yaml
+++ b/gitops/applications/base/deploy-env-onboard/env-onboard-xplane-terraform.yaml
@@ -61,7 +61,13 @@ spec:
       - key: "k8s_cluster_type"
         value: "${ARGOCD_ENV_k8s_cluster_type}"
       - key: cc_cluster_name
-        value: ${ARGOCD_ENV_cluster_name}                        
+        value: ${ARGOCD_ENV_cluster_name}
+      - key: storage_class
+        value: "ceph-bucket"
+      - key: max_objects
+        value: "${ARGOCD_ENV_ceph_max_objects}"
+      - key: max_size
+        value: ${ARGOCD_ENV_ceph_max_size}                                
 
   # All Terraform outputs are written to the connection secret.
   providerConfigRef:
