--- a/gitops/applications/base/capi/cluster-deploy.yaml
+++ b/gitops/applications/base/capi/cluster-deploy.yaml
@@ -200,14 +200,17 @@ metadata:
 spec:
   template:
     spec:
+      files:
+        - content: ""
+          owner: root:root
+          path: /etc/default/kubelet
+          permissions: "0640"
       joinConfiguration:
         nodeRegistration:
           kubeletExtraArgs:
             cloud-provider: external
-            node-ip: REPLACE_IP
       preKubeadmCommands:
-        - export HOST_IP=$(ip addr show eth0 | grep "inet\b" | awk '{print $2}' | cut -d/ -f1)
-        - sed "s/REPLACE_IP/$HOST_IP/g" /var/lib/kubelet/kubeadm-flags.env -i
+        - echo "KUBELET_EXTRA_ARGS=--node-ip=$(ip addr show eth0 | grep "inet\b" | awk '{print $2}' | cut -d/ -f1)" >> /etc/default/kubelet
       postKubeadmCommands:
         - "curl -L https://dl.k8s.io/release/v${ARGOCD_ENV_capi_cluster_kube_version}/bin/linux/amd64/kubectl -o /usr/local/bin/kubectl"
         - "chmod +x /usr/local/bin/kubectl"
