--- a/gitops/argo-apps/base/capi.yaml
+++ b/gitops/argo-apps/base/capi.yaml
@@ -34,6 +34,7 @@ spec:
         valuesObject:
           bootstrap: kubeadm
           controlPlane: kubeadm
+          addon: helm
           infrastructure: proxmox:v${ARGOCD_ENV_utils_capi_capi_infra_provider_version}
           cert-manager:
             enabled: true
