--- a/gitops/applications/base/capi/cluster-deploy.yaml
+++ b/gitops/applications/base/capi/cluster-deploy.yaml
@@ -72,6 +72,8 @@ spec:
       nodeRegistration:
         kubeletExtraArgs:
           cloud-provider: external
+    preKubeadmCommands:
+      - echo "KUBELET_EXTRA_ARGS=--node-ip=$(ip addr show eth0 | grep "inet\b" | awk '{print $2}' | cut -d/ -f1)" >> /etc/default/kubelet
     postKubeadmCommands:
       - "curl -L https://dl.k8s.io/release/v${ARGOCD_ENV_capi_cluster_kube_version}/bin/linux/amd64/kubectl -o /usr/local/bin/kubectl"
       - "chmod +x /usr/local/bin/kubectl"
