--- a/gitops/argo-apps/base/metallb.yaml
+++ b/gitops/argo-apps/base/metallb.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ${ARGOCD_ENV_sc_metallb_app_name}
   namespace: ${ARGOCD_ENV_sc_app_namespace}
   annotations:
-    argocd.argoproj.io/sync-wave: ${ARGOCD_ENV_sc_sync_wave}
+    argocd.argoproj.io/sync-wave: ${ARGOCD_ENV_sc_metallb_sync_wave}
 
   finalizers:
     - resources-finalizer.argocd.argoproj.io
