try ignore diff

--- a/gitops/argo-apps/base/metallb.yaml
+++ b/gitops/argo-apps/base/metallb.yaml
@@ -11,6 +11,11 @@ metadata:
 
 spec:
   project: default
+  ignoreDifferences:
+    - kind: CustomResourceDefinition
+      name: bgppeers.metallb.io
+      jsonPointers:
+        - /spec/conversion/webhook
   syncPolicy:
     automated:
       prune: true
