--- a/gitops/applications/base/metallb/ipaddress_pools.yaml
+++ b/gitops/applications/base/metallb/ipaddress_pools.yaml
@@ -6,3 +6,9 @@ metadata:
 spec:
   addresses:
     - ${ARGOCD_ENV_metallb_ip_range_begin}-${ARGOCD_ENV_metallb_ip_range_end}
+---
+apiVersion: metallb.io/v1beta1
+kind: L2Advertisement
+metadata:
+  name: l2-advert
+  namespace: ${ARGOCD_ENV_metallb_namespace}
