--- a/gitops/argo-apps/base/metallb.yaml
+++ b/gitops/argo-apps/base/metallb.yaml
@@ -13,6 +13,7 @@ spec:
   project: default
   ignoreDifferences:
     - kind: CustomResourceDefinition
+      group: apiextensions.k8s.io
       name: bgppeers.metallb.io
       jsonPointers:
         - /spec/conversion/webhook
