--- a/gitops/argo-apps/base/argocd-helm.yaml
+++ b/gitops/argo-apps/base/argocd-helm.yaml
@@ -508,6 +508,7 @@ spec:
             #   requests:
             #     cpu: 250m
             #     memory: 512Mi
+            envFrom: plugin-env-vars
             env:
               - name: HELM_CACHE_HOME
                 value: /helm-working-dir
