--- a/gitops/argo-apps/base/argocd-helm.yaml
+++ b/gitops/argo-apps/base/argocd-helm.yaml
@@ -508,7 +508,8 @@ spec:
             #   requests:
             #     cpu: 250m
             #     memory: 512Mi
-            envFrom: plugin-env-vars
+            envFrom:
+              - configMapRef: plugin-env-vars
             env:
               - name: HELM_CACHE_HOME
                 value: /helm-working-dir
