Update secrets exporter job

--- a/gitops/applications/base/storage-cluster-rook-ceph-post/rook-ceph-ext-secrets-job.yaml
+++ b/gitops/applications/base/storage-cluster-rook-ceph-post/rook-ceph-ext-secrets-job.yaml
@@ -14,6 +14,9 @@ spec:
           volumeMounts:
             - mountPath: /data
               name: shared-data
+            - name: rgw-endpoint
+              mountPath: /tmp/rgw-secret
+              readOnly: true
           image: bitnami/kubectl:latest
           securityContext:
             runAsNonRoot: true
@@ -28,9 +31,9 @@ spec:
               # Additional env vars
               NAMESPACE="rook-ceph-external"
               KUBECTL="kubectl"
-              RGW_EXTERNAL_IP=$(kubectl get svc rook-rgw-external -n rook-ceph -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-              RGW_ENDPOINT="$RGW_EXTERNAL_IP:80"
-
+              RGW_ENDPOINT=$(cat /tmp/rgw-secret/RGW_EXTERNAL_IP)
+              RGW_EXTERNAL_PORT=$(cat /tmp/rgw-secret/RGW_EXTERNAL_PORT)
+              
               # Create rook-ceph-external namespace
               if ! $KUBECTL get namespace "$NAMESPACE" &>/dev/null; then
                 $KUBECTL \
@@ -44,7 +47,6 @@ spec:
               # Append other variables to /data/ceph_env and create secret
               if [ -s /data/ceph_env ]; then
                 echo "export RGW_EXTERNAL_IP=$RGW_EXTERNAL_IP" >> /data/ceph_env
-                echo "export RGW_ENDPOINT=$RGW_ENDPOINT" >> /data/ceph_env
                 kubectl create secret generic ceph-external-cluster-secret \
                   --namespace $NAMESPACE \
                   --from-file=config=/data/ceph_env --dry-run=client -o yaml | kubectl apply -f -
@@ -96,9 +98,12 @@ spec:
               curl -fsSL -o /data/create-external-cluster-resources.py \
                 https://raw.githubusercontent.com/rook/rook/refs/heads/release-1.16/deploy/examples/create-external-cluster-resources.py
 
+              # Prepare ceph for external use
+              RGW_ENDPOINT=$(cat /tmp/rgw-secret/RGW_ENDPOINT)
               echo "Running create-external-cluster-resources.py..."
               python3 /data/create-external-cluster-resources.py \
                 --rbd-data-pool-name ceph-blockpool \
+                --rgw-endpoint $RGW_ENDPOINT \
                 --cephfs-data-pool-name ceph-filesystem-data0 \
                 --skip-monitoring-endpoint \
                 --namespace rook-ceph-external --format bash > /data/ceph_env
@@ -126,6 +131,9 @@ spec:
               readOnly: true
             - name: shared-data
               mountPath: /data
+            - name: rgw-endpoint
+              mountPath: /tmp/rgw-secret
+              readOnly: true
       volumes:
         - name: ceph-admin-secret
           secret:
@@ -142,9 +150,11 @@ spec:
                 path: mon-endpoints
         - name: ceph-config
           emptyDir: {}
-
         - name: shared-data
           emptyDir: {}
+        - name: rgw-endpoint
+          secret:
+            secretName: rgw-endpoint
       tolerations:
         - key: "node.kubernetes.io/unreachable"
           operator: "Exists"
