--- a/gitops/applications/base/rook-ceph/kustomization.yaml
+++ b/gitops/applications/base/rook-ceph/kustomization.yaml
@@ -1,8 +1,23 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - objectstore-certs.yaml
-  - ceph-blockpool-crs.yaml
-  - ceph-objectstore-crs.yaml
-  - ceph-filsystem-crs.yaml
-  - storageclass.yaml
+  - rook-ceph-namespace.yaml
+  - external-secrets-sync.yaml
+  - rook-ceph-consumer-job.yaml
+
+helmCharts:
+  - name: rook-ceph
+    releaseName: rook-ceph
+    version: ${ARGOCD_ENV_rook_ceph_helm_version}
+    repo: https://charts.rook.io/release
+    valuesFile: rook-ceph-values.yaml
+    namespace: rook-ceph
+    includeCRDs: true
+
+  - name: rook-ceph-cluster
+    releaseName: rook-ceph-cluster
+    version: ${ARGOCD_ENV_rook_ceph_helm_version}
+    repo: https://charts.rook.io/release
+    valuesFile: ceph-external-values.yaml
+    namespace: rook-ceph-external
+    includeCRDs: true
