--- a/gitops/applications/base/storage-cluster-rook-ceph/kustomization.yaml
+++ b/gitops/applications/base/storage-cluster-rook-ceph/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - rook-ceph-namespace.yaml
   - ceph-objectstore-service.yaml
   - ceph-dashboard-loadbalancer.yaml
+  - rgw-endpoint-job.yaml
 
 helmCharts:
   - name: rook-ceph
