--- a/gitops/applications/base/rook-ceph/rook-ceph-values.yaml
+++ b/gitops/applications/base/rook-ceph/rook-ceph-values.yaml
@@ -5,7 +5,10 @@ csi:
   interval: 60s
 enableDiscoveryDaemon: false
 monitoring:
-  enabled: false
+  enabled: false # true
+  # externalMgrEndpoints:
+  #   - ip: "192.168.0.2"
+  #   - ip: "192.168.0.3"
 resources:
  limits:
   memory: 512Mi
