--- a/gitops/applications/base/sc-rook-ceph-post-config/rook-ceph-ext-secrets-job.yaml
+++ b/gitops/applications/base/sc-rook-ceph-post-config/rook-ceph-ext-secrets-job.yaml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: rook-ceph-external-secrets
-  namespace: rook-ceph
+  namespace: ${ARGOCD_ENV_rook_ceph_namespace}
 spec:
   template:
     spec:
@@ -57,7 +57,7 @@ spec:
               fi
       initContainers:
         - name: rook-ceph-secrets-generator
-          image: quay.io/ceph/ceph:v19
+          image: quay.io/ceph/ceph:${ARGOCD_ENV_rook_ceph_image_version}
           command:
             - /bin/bash
             - -c
