--- a/gitops/argo-apps/base/sc-rook-ceph.yaml
+++ b/gitops/argo-apps/base/sc-rook-ceph.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ${ARGOCD_ENV_sc_rook_ceph_app_name}
   namespace: ${ARGOCD_ENV_sc_app_namespace}
   annotations:
-    argocd.argoproj.io/sync-wave: ${ARGOCD_ENV_sc_sync_wave}
+    argocd.argoproj.io/sync-wave: ${ARGOCD_ENV_sc_rook_ceph_sync_wave}
 
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -27,12 +27,12 @@ spec:
       - PruneLast=true
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: ${ARGOCD_ENV_sc_app_namespace}
+    namespace: ${ARGOCD_ENV_sc_rook_ceph_namespace}
 
   source:
     repoURL: ${ARGOCD_ENV_argocd_repo_url}
     targetRevision: ${ARGOCD_ENV_sc_application_gitrepo_tag}
-    path: gitops/applications/base/storage-cluster-rook-ceph
+    path: gitops/applications/base/sc-rook-ceph
     plugin:
       name: envsubst
       env:
