--- a/gitops/applications/base/rook-ceph/rook-ceph-consumer-job.yaml
+++ b/gitops/applications/base/rook-ceph/rook-ceph-consumer-job.yaml
@@ -7,7 +7,7 @@ spec:
   template:
     spec:
       restartPolicy: OnFailure
-      #serviceAccountName: ceph-job-sa
+      serviceAccountName: ceph-job-sa
       containers:
         - name: kubectl-consumer
           volumeMounts:
