add miss in kustomize

--- a/gitops/applications/base/sc-rook-ceph/kustomization.yaml
+++ b/gitops/applications/base/sc-rook-ceph/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - rook-ceph-namespace.yaml
   - ceph-objectstore-service.yaml
   - ceph-dashboard-loadbalancer.yaml
+  - rbac.yaml
   - rgw-endpoint-job.yaml
 
 helmCharts:
