update sa ref 2

--- a/gitops/applications/base/sc-rook-ceph-post-config/rook-ceph-ext-secrets-job.yaml
+++ b/gitops/applications/base/sc-rook-ceph-post-config/rook-ceph-ext-secrets-job.yaml
@@ -8,7 +8,7 @@ spec:
     spec:
       restartPolicy: OnFailure
       dnsPolicy: ClusterFirstWithHostNet
-      serviceAccountName: rook-ceph-default
+      serviceAccountName: ceph-job-sa
       containers:
         - name: kubectl
           volumeMounts:
