rm ns creation in job

--- a/gitops/applications/base/sc-rook-ceph-post-config/rook-ceph-ext-secrets-job.yaml
+++ b/gitops/applications/base/sc-rook-ceph-post-config/rook-ceph-ext-secrets-job.yaml
@@ -29,20 +29,20 @@ spec:
             - -c
             - |
               # Additional env vars
-              NAMESPACE="rook-ceph-external"
+              NAMESPACE="rook-ceph"
               KUBECTL="kubectl"
               RGW_ENDPOINT=$(cat /tmp/rgw-secret/RGW_EXTERNAL_IP)
               RGW_EXTERNAL_PORT=$(cat /tmp/rgw-secret/RGW_EXTERNAL_PORT)
               
               # Create rook-ceph-external namespace
-              if ! $KUBECTL get namespace "$NAMESPACE" &>/dev/null; then
-                $KUBECTL \
-                create \
-                namespace \
-                "$NAMESPACE"
-              else
-                echo "Namespace $NAMESPACE already exists"
-              fi
+              # if ! $KUBECTL get namespace "$NAMESPACE" &>/dev/null; then
+              #   $KUBECTL \
+              #   create \
+              #   namespace \
+              #   "$NAMESPACE"
+              # else
+              #   echo "Namespace $NAMESPACE already exists"
+              # fi
               
               # Append other variables to /data/ceph_env and create secret
               if [ -s /data/ceph_env ]; then
