excape $ in bash contents

--- a/gitops/applications/base/sc-rook-ceph-post-config/rook-ceph-ext-secrets-job.yaml
+++ b/gitops/applications/base/sc-rook-ceph-post-config/rook-ceph-ext-secrets-job.yaml
@@ -69,27 +69,27 @@ spec:
               KEYRING_FILE="/etc/ceph/keyring"
 
               write_endpoints() {
-                endpoints=$(cat ${MON_CONFIG})
-                mon_endpoints=$(echo "${endpoints}" | sed 's/[a-z0-9_-]\+=//g')
+                endpoints=$(cat $${MON_CONFIG})
+                mon_endpoints=$(echo "$${endpoints}" | sed 's/[a-z0-9_-]\+=//g')
                 DATE=$(date)
-                echo "$DATE writing mon endpoints to ${CEPH_CONFIG}: ${endpoints}"
-                cat <<EOF > ${CEPH_CONFIG}
+                echo "$DATE writing mon endpoints to $${CEPH_CONFIG}: $${endpoints}"
+                cat <<EOF > $${CEPH_CONFIG}
               [global]
-              mon_host = ${mon_endpoints}
+              mon_host = $${mon_endpoints}
 
               [client.admin]
-              keyring = ${KEYRING_FILE}
+              keyring = $${KEYRING_FILE}
               EOF
               }
 
-              ceph_secret=${ROOK_CEPH_SECRET}
+              ceph_secret=$${ROOK_CEPH_SECRET}
               if [[ "$ceph_secret" == "" ]]; then
                 ceph_secret=$(cat /var/lib/rook-ceph-mon/secret.keyring)
               fi
 
-              cat <<EOF > ${KEYRING_FILE}
-              [${ROOK_CEPH_USERNAME}]
-              key = ${ceph_secret}
+              cat <<EOF > $${KEYRING_FILE}
+              [$${ROOK_CEPH_USERNAME}]
+              key = $${ceph_secret}
               EOF
 
               write_endpoints
