Export RGW_EXTERNAL_PORT and RGW_EXTERNAL_IP

--- a/gitops/applications/base/sc-rook-ceph-post-config/rook-ceph-ext-secrets-job.yaml
+++ b/gitops/applications/base/sc-rook-ceph-post-config/rook-ceph-ext-secrets-job.yaml
@@ -31,22 +31,13 @@ spec:
               # Additional env vars
               NAMESPACE="rook-ceph"
               KUBECTL="kubectl"
-              RGW_ENDPOINT=$(cat /tmp/rgw-secret/RGW_EXTERNAL_IP)
+              RGW_EXTERNAL_IP=$(cat /tmp/rgw-secret/RGW_EXTERNAL_IP)
               RGW_EXTERNAL_PORT=$(cat /tmp/rgw-secret/RGW_EXTERNAL_PORT)
-              
-              # Create rook-ceph-external namespace
-              # if ! $KUBECTL get namespace "$NAMESPACE" &>/dev/null; then
-              #   $KUBECTL \
-              #   create \
-              #   namespace \
-              #   "$NAMESPACE"
-              # else
-              #   echo "Namespace $NAMESPACE already exists"
-              # fi
               
               # Append other variables to /data/ceph_env and create secret
               if [ -s /data/ceph_env ]; then
                 echo "export RGW_EXTERNAL_IP=$RGW_EXTERNAL_IP" >> /data/ceph_env
+                echo "export RGW_EXTERNAL_PORT=$RGW_EXTERNAL_PORT" >> /data/ceph_env
                 kubectl create secret generic ceph-external-cluster-secret \
                   --namespace $NAMESPACE \
                   --from-file=config=/data/ceph_env --dry-run=client -o yaml | kubectl apply -f -
